# MiguelElGallo

./: .gitignore  AGENTS.md  README.md
.github/: copilot-instructions.md
.github/workflows/: update-readme.yml
update_readme/: pyproject.toml
update_readme/src/: main.py  tools.py
update_readme/tests/: test_tools.py
