[project]
name = "update-readme"
version = "0.1.0"
description = "Auto-update GitHub profile README using Copilot SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "github-copilot-sdk>=0.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
invalid-argument-type = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
